js/src/jit-test/tests/binast/invalid/wtf-8-interface-name.binjs
BINJS
[
GRAMMAR
]
identity
;
2AssertedScriptGlobalScope
(
AssignmentExpression4AssignmentTargetIdentifier0LiteralNumericExpression
Script
_
[
STRINGS
]
identity
;
a
[
TREE
]
identity
;
&
?
